# TrajectoryOptimization_GA

./: .gitignore  CMakeLists.txt  README.md
docs/: algorithm_details.md  jaxa_himes_data_note.md
scripts/: visualize_results.m
src/: main.cpp
